# music-agent

./: Cargo.toml  QUICKSTART.md  README.md
public/suggestions/: 01 American Pie.suggestions.json  02 Friend of the Devil.suggestions.json
src/: agent.rs  error.rs  main.rs  suggestions.rs
src/llm/: mod.rs  ollama.rs
src/metadata/: mod.rs  reader.rs  writer.rs
