[package]
name = "music-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.14"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
